# unsafe-haskell-intro-fp-matsuri-2026

./: .gitignore  README.md  cabal-scaffold.yaml  cabal.project  cabal.project.freeze
.github/workflows/: haskell.yml
extrecord/: README.md  extrecord.cabal
extrecord-core/: CHANGELOG.md  extrecord-core.cabal
extrecord-core/src/FpMatsuri2026/: TypeOps.hs
extrecord-safe/: extrecord-safe.cabal
extrecord-safe/impl/FpMatsuri2026/HList/Safe/: Core.hs
extrecord-sig/: CHANGELOG.md  README.md  extrecord-sig.cabal
extrecord-sig/src/FpMatsuri2026/: ExtRec.hs  HList.hs
extrecord-sig/src/FpMatsuri2026/HList/: Core.hsig
extrecord-unsafe/: LICENSE  extrecord-unsafe.cabal
extrecord-unsafe/impl/FpMatsuri2026/HList/Unsafe/: Core.hs
extrecord-unsafe/src/FpMatsuri2026/ExtRec/Unsafe/: Builder.hs
extrecord/src/FpMatsuri2026/: HList.hs  TypeOps.hs
extrecord/src/FpMatsuri2026/ExtRec/: HList.hs  HListMapped.hs
