cabal-version: 3.4
name: extrecord
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/unsafe-haskell-intro-fp-matsuri-2026/extrecord#readme>
homepage: https://github.com/konn/unsafe-haskell-intro-fp-matsuri-2026#readme
bug-reports: https://github.com/konn/unsafe-haskell-intro-fp-matsuri-2026/issues
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: (c) Hiromi ISHII 2026- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with:
  ghc ==9.12.4

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/unsafe-haskell-intro-fp-matsuri-2026
  subdir: extrecord

common defaults
  autogen-modules: Paths_extrecord
  other-modules: Paths_extrecord
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  default-language: GHC2021
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    KindSignatures
    RankNTypes
    ScopedTypeVariables
    TypeFamilies
    UndecidableInstances

  build-depends: base >=4.7 && <5

library
  import: defaults
  build-depends:
    barbies,
    bifunctors,
    constraints,
    containers,
    dlist,
    fmlist,
    ghc-tcplugin-api,
    ghc-tcplugins-extra,
    lens,
    mtl,
    primitive,
    reflection,
    semialign,
    singletons,
    singletons-base,
    singletons-th,
    tagged,
    text,
    these,
    transformers,
    unordered-containers,
    vector,

  hs-source-dirs: src
  -- cabal-gild: discover src --exclude=src/**/Internal.hs --exclude=src/**/Internal/**/*.hs
  exposed-modules:
    FpMatsuri2026.ExtRec.HList
    FpMatsuri2026.ExtRec.HListMapped
    FpMatsuri2026.HList
    FpMatsuri2026.TypeOps

  -- cabal-gild: discover src --include=src/**/Internal.hs --include=src/**/Internal/**/*.hs
  other-modules:

executable extrecord
  import: defaults
  hs-source-dirs: app
  main-is: Main.hs
  -- cabal-gild: discover app --exclude=app/Main.hs
  other-modules:
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: extrecord

test-suite extrecord-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  -- cabal-gild: discover test --exclude=test/Test.hs
  other-modules:
  ghc-options:
    -threaded
    -O2
    -rtsopts
    -with-rtsopts=-N

  build-depends: extrecord
